# stack4things-openstack-iotronic

./: .gitignore  .gitreview  README.rst  build.sh  install.sh  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
etc/apache2/: iotronic-ssl.conf  iotronic.conf
etc/iotronic/: iotronic.conf
etc/systemd/system/: iotronic-conductor.service  iotronic-wamp-agent.service
iotronic/api/: app.py  config.py
iotronic/api/controllers/: link.py  root.py
iotronic/api/controllers/v1/: __init__.py  board.py  enabledwebservice.py  fleet.py  location.py  node.py  plugin.py  port.py  request.py  result.py  service.py  types.py  utils.py  webservice.py
iotronic/cmd/: conductor.py  dbsync.py
iotronic/common/: designate.py  exception.py  image_service.py  keystone.py  neutron.py  policy.py  rpc.py  service.py  states.py  utils.py
iotronic/common/glance_service/: base_image_service.py  service_utils.py
iotronic/common/glance_service/v2/: image_service.py
iotronic/conductor/: endpoints.py  manager.py  provisioner.py  rpcapi.py  task_manager.py
iotronic/db/: api.py
iotronic/db/sqlalchemy/: api.py  migration.py  models.py
iotronic/db/sqlalchemy/alembic/: README  env.py
iotronic/db/sqlalchemy/alembic/versions/: 10460765f337_extended_board_code_attribute.py  (+7 more)
iotronic/objects/: __init__.py  board.py  enabledwebservice.py  exposedservice.py  fleet.py  location.py  node.py  plugin.py  port.py  request.py  result.py  service.py  sessionwp.py  utils.py  wampagent.py  webservice.py
iotronic/openstack/common/: eventlet_backdoor.py  fileutils.py  service.py
iotronic/wamp/: agent.py  clientwamp.py  functions.py  registerd_functions.py  rpcwamp.py  rpcwampserver.py  wampmessage.py  wampresponse.py
iotronic/wamp/proxies/: nginx.py  proxy.py
utils/: all.sql  iotronic.sql  iotronic_curl_client  remove_board.sql  zero
var/www/cgi-bin/iotronic/: app.wsgi
zuul.d/: projects.yaml
