[metadata]
name = iotronic

summary = IoTronic is an Internet of Things resource management service for OpenStack clouds.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://github.com/openstack/iotronic
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[entry_points]
console_scripts =
    iotronic-conductor = iotronic.cmd.conductor:main
    iotronic-wamp-agent = iotronic.cmd.wamp_agent:main
    iotronic-dbsync = iotronic.cmd.dbsync:main


iotronic.database.migration_backend =
    sqlalchemy = iotronic.db.sqlalchemy.migration

[options]
build_scripts =
    executable= /usr/bin/env python

[files]
packages =
    iotronic

data_files =
    /etc/iotronic =
        etc/iotronic/iotronic.conf
        etc/iotronic/policy.json
    /var/www/cgi-bin/iotronic =
        iotronic/wsgi/app.wsgi
    /etc/systemd/system =
        etc/systemd/system/iotronic-conductor.service
        etc/systemd/system/iotronic-wamp-agent.service
    
[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = iotronic/locale
domain = iotronic

[update_catalog]
domain = iotronic
output_dir = iotronic/locale
input_file = iotronic/locale/iotronic.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = iotronic/locale/iotronic.pot
